<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <android.support.design.widget.TextInputLayout
            android:hint="@string/name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_practitionerFormName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_marginBottom="10dp"
            android:hint="@string/surname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_practitionerFormSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_marginBottom="10dp"
            android:hint="@string/adress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:inputType="text"
                android:id="@+id/edt_practitionerFormCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_marginBottom="10dp"
            android:hint="@string/adress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:inputType="numberSigned"
                android:id="@+id/edt_practitionerFormCityCP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_marginBottom="10dp"
            android:hint="@string/adress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:inputType="text"
                android:id="@+id/edt_practitionerFormAdress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_practitionerForm"
            android:layout_gravity="bottom"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorOnPrimary"
            android:padding="12dp"
            android:text="Confirmer" />
    </LinearLayout>
</LinearLayout>
